# LearningClock

./: .gitignore  LearningClock.code-workspace  README.md  pyproject.toml
.github/workflows/: code-inventory.yml  coverage-pages.yml
diavgeia/LearningClock/: Developer-Commands.md  Learning-Clock-Dashboard.md  WebHome.md
diavgeia/LearningClock/views/learning-clock-dashboard/: view.js
docs/: code-inventory-automation.md  convenience-commands.md  coverage.md  csv-contract.md  obsidian-diavgeia-documentation.md  production-release.md  quick-start.md  requirements.md  source-code-structure.md  tests.md  usage.md  vscode-support.md
docs/assets/: coverage-theme.css
launcher/: Learning-clock.vbs  dev.properties  vbs-debug.properties
scripts/: clean.cmd  compile.cmd  coverage.cmd  csv-test.cmd  deploy.cmd  dev.cmd  dev.py  export-diavgeia-vault.ps1  generate_readme_assets.py  install.cmd  package.cmd  pygount-summary.cmd  pygount_summary.py  readme-assets.cmd  release.cmd  test.cmd  test1.cmd
src/learningclock/: __init__.py  __main__.py  app.py  cli.py  csv_store.py  learning-clock.py
tests/: learning_clock_csv_test_support.py  test_cli.py  test_learning_clock_csv_regression.py  test_learning_clock_csv_unit.py
tests/fixtures/: MAGPAI-learning_time_log.csv  MAGPAI-regression.properties  clock-QA.properties  sample_learning_time_log.csv
