[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learningclock"
version = "0.1.0"
description = "LearningClock Python project."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Vasilis" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "debugpy>=1.8",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5"
]

[project.scripts]
learningclock = "learningclock.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
cache_dir = "build/.pytest_cache"
addopts = [
  "--strict-markers",
  "--strict-config"
]

[tool.coverage.run]
branch = true
source = ["learningclock"]
data_file = "build/coverage/.coverage"

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
cache-dir = "build/.ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
